// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViewListMobile component  data length > 3 should renders properly  1`] = `
<div
  className="DataViewList + left "
>
  <div
    className="info__title"
  >
    Languages
  </div>
  <div
    className="info__content"
  >
    <div
      className="item"
      key="english"
    >
      <span
        className="item__symbol"
      />
      english
    </div>
    <div
      className="item"
      key="french"
    >
      <span
        className="item__symbol"
      />
      french
    </div>
    <div
      className="item"
      key="german"
    >
      <span
        className="item__symbol"
      />
      german
    </div>
    <SeeMore
      bottom=""
      data={
        Array [
          Object {
            "name": "polish",
            "symnol": "p",
          },
        ]
      }
      left=""
      right=""
      top="100%"
    />
  </div>
  <div
    style={
      Object {
        "height": "20px",
      }
    }
  />
</div>
`;

exports[`DataViewListMobile component data length <= 3 should renders properly  1`] = `
<div
  className="DataViewList + left "
>
  <div
    className="info__title"
  >
    Languages
  </div>
  <div
    className="info__content"
  >
    <div
      className="item"
      key="english"
    >
      <span
        className="item__symbol"
      />
      english
    </div>
    <div
      className="item"
      key="french"
    >
      <span
        className="item__symbol"
      />
      french
    </div>
  </div>
</div>
`;
